# eSS-c

./: CMakeLists.txt  Makefile  Makefile.old  README.md  build.sh  compile.txt  fort.1  main  main.d  main_file.c  send_12_proc_3h.sh
benchmarks/bbob/: benchmark_functions_BBOB.d  benchmarks.d  benchmarkshelper.d  benchmarksnoisy.d  fgeneric.d
benchmarks/customized/: example.d  exampleJacobian.d
benchmarks/python/: python_interface.c
benchmarks/systemsBiology/: benchmark_functions_SystemBiology.d
examples/: constraints_example.c  example_original.c  job_CESGA.sh  minlp_constraints_example.c  nl2sol_example.c
include/method_module/: structure_paralleltestbed.h
include/method_module_fortran/: funcevalinterface.mod  localsolverinterfacec.mod  modcess.mod  modessm.mod  modsacess.mod  parallelscattersearchfunctions.mod  scattersearch.mod  scattersearchtypes.mod
inputs/: TEMPLATE_3Step_Pathway.xml  TEMPLATE_3Step_Pathway_SEC.xml  TEMPLATE_B1_SEC.xml  TEMPLATE_B2.xml  TEMPLATE_B2_SEC.xml  TEMPLATE_B3.xml  TEMPLATE_B3_SEC.xml  TEMPLATE_B4.xml  TEMPLATE_B4_SEC.xml  TEMPLATE_B5.xml  TEMPLATE_B5_SEC.xml  TEMPLATE_B6.xml  TEMPLATE_B6_SEC.xml  TEMPLATE_CIRCADIAN.xml  TEMPLATE_CIRCADIAN_SEC.xml  TEMPLATE_Nfkb.xml  TEMPLATE_Nfkb_SEC.xml
inputs/reproducibility/: TEMPLATE_B1_CeSS_T1400.xml  TEMPLATE_B1_CeSS_T700.xml  TEMPLATE_B1_eSSm.xml  TEMPLATE_B1_saCeSS.xml  TEMPLATE_B2_CeSS_T400.xml  TEMPLATE_B2_CeSS_T800.xml  TEMPLATE_B2_eSSm.xml  TEMPLATE_B2_saCeSS.xml  TEMPLATE_B3_CeSS_T50000.xml  TEMPLATE_B3_eSSm.xml  TEMPLATE_B4_CeSS_T100.xml  TEMPLATE_B4_CeSS_T200.xml  TEMPLATE_B4_eSSm.xml  TEMPLATE_B5_CeSS_T200.xml  TEMPLATE_B5_CeSS_T400.xml  TEMPLATE_B5_eSSm.xml  TEMPLATE_B5_saCeSS.xml  TEMPLATE_B6_CeSS_T1000.xml  TEMPLATE_B6_CeSS_T2000.xml  TEMPLATE_B6_eSSm.xml  TEMPLATE_B6_saCeSS.xml
reproducibility_scripts/: README
reproducibility_scripts/B1/: B1_CESS_10_MPI_TIME_1400.sh  B1_CESS_10_MPI_TIME_700.sh  B1_ESS_10_MPI.sh  B1_ESS_20_MPI.sh  B1_ESS_40_MPI.sh  B1_SACESS_10_MPI.sh  B1_SACESS_10_MPI_2_OMP.sh  B1_SACESS_10_MPI_4_OMP.sh  B1_SACESS_20_MPI.sh  B1_SACESS_20_MPI_2_OMP.sh  B1_SACESS_40_MPI.sh  B1_SACESS_5_MPI_2_OMP.sh  B1_SACESS_5_MPI_4_OMP.sh  B1_SACESS_5_MPI_8_OMP.sh  EXAMPLE_QSUB.sh
reproducibility_scripts/B2/: B2_CESS_10_MPI_TIME_400.sh  B2_CESS_10_MPI_TIME_800.sh  B2_ESS_10_MPI.sh  B2_ESS_20_MPI.sh  B2_ESS_40_MPI.sh  B2_SACESS_10_MPI.sh  B2_SACESS_10_MPI_2_OMP.sh  B2_SACESS_10_MPI_4_OMP.sh  B2_SACESS_20_MPI.sh  B2_SACESS_20_MPI_2_OMP.sh  B2_SACESS_40_MPI.sh  B2_SACESS_5_MPI_2_OMP.sh  B2_SACESS_5_MPI_4_OMP.sh  B2_SACESS_5_MPI_8_OMP.sh  EXAMPLE_QSUB.sh
reproducibility_scripts/B3/: B3_CESS_10_MPI_TIME_50000.sh  B3_ESS_10_MPI.sh  B3_SACESS_10_MPI.sh  EXAMPLE_QSUB.sh
reproducibility_scripts/B4/: B4_CESS_10_MPI_TIME_100.sh  B4_CESS_10_MPI_TIME_200.sh  (+13 more)
sacess/: CMakeLists.txt
sacess/benchmarks/bbob/: bbobStructures.h  benchmark_functions_BBOB.c  benchmark_functions_BBOB.h  fgeneric.c
sacess/benchmarks/customized/: example.c  example.h  exampleJacobian.c
sacess/benchmarks/matlab/: examplematlab.c  examplematlab.h
sacess/benchmarks/python/: P1_ForwardSimulation_VEPmodel_Sourcelevel.py  P2_ForwardSimulation_VEPmodel_Sensorlevel.py  P3_ForwardSimulation_VEPmodel_Sensorlevel_nopropagation.py  python_interface.c
sacess/benchmarks/systemsBiology/: benchmark_functions_SystemBiology.c  benchmark_functions_SystemBiology.h
sacess/benchmarks/systemsBiology/BioPredyn/B1/: amigoRHS_B1.c
sacess/benchmarks/systemsBiology/BioPredyn/B2/: amigoRHS_B2.c
sacess/benchmarks/systemsBiology/BioPredyn/B3/: amigoRHS_B3.c
sacess/benchmarks/systemsBiology/BioPredyn/B4/: amigoRHS_B4.c
sacess/benchmarks/systemsBiology/BioPredyn/B5/: amigoRHS_B5.c
sacess/benchmarks/systemsBiology/BioPredyn/B6/fly/: Makefile
sacess/benchmarks/systemsBiology/others/3-step_pathway/: amigoRHS_3step.c
sacess/benchmarks/systemsBiology/others/Nfkb/: amigoRHS_NFKB.c
sacess/benchmarks/systemsBiology/others/circadian/: amigoRHS_CIRCADIAN.c
sacess/include/input/: input_AMIGO.h  input_module.h
sacess/include/method_module/: benchmark_functions_SystemBiology.h  common_solver_operations.h  execution_methods.h  local_solvers.h  parallel_functions.h  parallel_functions_cooperative.h  parallel_islands_Solvers.h  serSolvers.h  solversinterface.h  structure_paralleltestbed.h
sacess/include/method_module_fortran/: common_functions.mod  dhc_mod.mod  localsolver.mod  misqp_interface.mod  modacessdist.mod  qsort_module.mod  scattersearchfunctions.mod
sacess/include/output/: output.h
sacess/libAMIGO/include/include_amigo/: AMIGO_model.h  AMIGO_pe.h  AMIGO_problem.h  simulate_amigo_model.h
sacess/libAMIGO/include/include_de/: de.h
sacess/libAMIGO/src/src_SRES/: ESES.c  ESES.d  ESSRSort.c  sharefunc.c  sharefunc.d  sres_AMIGO_pe.c
sacess/libAMIGO/src/src_amigo/: AMIGO_model.c  AMIGO_model.d  AMIGO_model_stats.c  AMIGO_model_stats.d  AMIGO_pe.c  AMIGO_problem.c  DE_AMIGO_pe.c  simulate_amigo_model.c  simulate_amigo_model.d
sacess/libAMIGO/src/src_cvodes/: cvodea.d  cvodes.d  cvodes_band.d  cvodes_bbdpre.d  cvodes_direct.d  cvodes_spgmr.d  cvodes_spils.d  fnvector_serial.d  nvector_serial.d  sundials_dense.d  sundials_direct.d  sundials_spbcgs.d
sacess/libAMIGO/src/src_de/: de_secuencial.c
sacess/libAMIGO/src/src_julia/: libAMIGO.d
sacess/libAMIGO/src/src_lbode/: lbode_AMIGO_rhs.c  mxLbodeAmigoInterface.c
sacess/src/: main_file.c  setup_benchmarks.c
sacess/src/input_module/: input_AMIGO.c  input_module.c
sacess/src/method_module/: common_solver_operations.c  evaluationinterface.c  localsolvers.c  parallel_functions.c  solversinterface.c  structure_paralleltestbed.c
sacess/src/method_module/eSS/: parallel_functions_cooperative_eSS.c
sacess/src/method_module_fortran/eSS/: acessdist.f90  common_functions.f90  funcevalinterface.f90  parallelscattersearchfunctions.f90  scattersearchfunctions.f90  scattersearchtypes.f90
sacess/src/output/: output.c  read_a_file_line_by_line.c
source/: Makefile  Makefile.save
src/: main_file.c  main_file.d  setup_benchmarks.c  setup_benchmarks.d
(+100 files in other folders)
